--- a/datasets/youtube.ipynb
+++ b/datasets/youtube.ipynb
@@ -405,7 +405,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "experiment",
+   "display_name": "backend-venv",
    "language": "python",
    "name": "python3"
   },
