Fixed many small issues with the Youtube filter

--- a/datasets/youtube.ipynb
+++ b/datasets/youtube.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,11 +13,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "youtube = build('youtube', 'v3', developerKey='AIzaSyBBdr6RyGr0fRnjAoHzn-NXRmwy_tiYL5A')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Channel ID: UCISrVZmDM4x-Rq9mmNUw7Zw\n",
+      "Channel Name: Blondie in China\n",
+      "Avatar URL: https://yt3.ggpht.com/ytc/AIdro_mwTLOIJf5a-29E8ip454Dtebsq48ukFFQ9gh0J9iudI-w=s88-c-k-c0x00ffffff-no-rj\n",
+      "Custom URL: https://www.youtube.com/c/@blondieinchina\n"
+     ]
+    }
+   ],
+   "source": [
+    "from googleapiclient.discovery import build\n",
+    "\n",
+    "def get_channel_info_by_handle(handle):\n",
+    "    \n",
+    "    # Step 1: Search for the channel using the handle\n",
+    "    search_response = youtube.search().list(\n",
+    "        q=handle,\n",
+    "        part='id,snippet',\n",
+    "        type='channel',\n",
+    "        maxResults=1\n",
+    "    ).execute()\n",
+    "    \n",
+    "    if not search_response.get('items'):\n",
+    "        return None\n",
+    "    \n",
+    "    channel_id = search_response['items'][0]['id']['channelId']\n",
+    "    \n",
+    "    # Step 2: Get detailed channel information\n",
+    "    channel_response = youtube.channels().list(\n",
+    "        id=channel_id,\n",
+    "        part='snippet'\n",
+    "    ).execute()\n",
+    "    \n",
+    "    if not channel_response.get('items'):\n",
+    "        return None\n",
+    "    \n",
+    "    channel_info = channel_response['items'][0]['snippet']\n",
+    "    \n",
+    "    return {\n",
+    "        'channel_id': channel_id,\n",
+    "        'channel_name': channel_info['title'],\n",
+    "        'avatar_url': channel_info['thumbnails']['default']['url'],\n",
+    "        # Note: The 'customUrl' is not the handle but the /c/ URL if available\n",
+    "        'custom_url': channel_info.get('customUrl', None)\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "handle = '@BlondieinChina'        # Example handle\n",
+    "result = get_channel_info_by_handle(handle)\n",
+    "\n",
+    "if result:\n",
+    "    print(f\"Channel ID: {result['channel_id']}\")\n",
+    "    print(f\"Channel Name: {result['channel_name']}\")\n",
+    "    print(f\"Avatar URL: {result['avatar_url']}\")\n",
+    "    print(f\"Custom URL: https://www.youtube.com/c/{result['custom_url']}\" if result['custom_url'] else \"Custom URL not available\")\n",
+    "else:\n",
+    "    print(\"Channel not found.\")"
    ]
   },
   {
