--- a/datasets/youtube.ipynb
+++ b/datasets/youtube.ipynb
@@ -544,10 +544,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import qrcode\n",
+    "\n",
+    "img = qrcode.make(\"https://www.arxiv.org/abs/2409.03247\")\n",
+    "img.save(\"my_qr.png\")"
+   ]
   }
  ],
  "metadata": {
