--- a/datasets/youtube.ipynb
+++ b/datasets/youtube.ipynb
@@ -560,7 +560,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
